gitops/java/overlays/rhpds/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
  namespace: argocd-java-demo
spec:
  host: argocd-java-demo.apps.cluster-ottawa-6687.ottawa-6687.example.opentlc.com
status:
  ingress:
  - conditions:
    host: argocd-java-demo.apps.cluster-ottawa-6687.ottawa-6687.example.opentlc.com
    routerCanonicalHostname: apps.cluster-ottawa-6687.ottawa-6687.example.opentlc.com
    routerName: default
    wildcardPolicy: None
